syntax = "proto3";
package raftpb;

option go_package = "github.com/sreniatnoc/rusd/raftpb";

// Internal Raft peer-to-peer RPCs.
// These are NOT part of the etcd client API - they are used for
// cluster consensus between rusd nodes.

service RaftInternal {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc InstallSnapshot(stream InstallSnapshotChunk) returns (InstallSnapshotResponse) {}
}

message LogEntry {
  uint64 index = 1;
  uint64 term = 2;
  bytes data = 3;
  EntryType entry_type = 4;
}

enum EntryType {
  NORMAL = 0;
  CONFIG_CHANGE = 1;
  SNAPSHOT = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  uint64 leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
  uint64 match_index = 3;
  uint64 conflict_index = 4;
  uint64 conflict_term = 5;
}

message RequestVoteRequest {
  uint64 term = 1;
  uint64 candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
  bool pre_vote = 5;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message InstallSnapshotChunk {
  uint64 term = 1;
  uint64 leader_id = 2;
  uint64 last_included_index = 3;
  uint64 last_included_term = 4;
  uint64 offset = 5;
  bytes data = 6;
  bool done = 7;
}

message InstallSnapshotResponse {
  uint64 term = 1;
}
